--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -13,11 +13,13 @@
 .bordered-box {
   border: 2px solid cornflowerblue;
   background: cornflowerblue;
-  color: white;
-  font-size: 1.25em;
-  min-height: 250px;
+  color: whitesmoke;
+  min-height: 350px;
   min-width: 250px;
+  width: 250px;
+  max-height: 350px;
   margin: 0.5em 0 1em 0;
+  overflow-y: auto;
 }
 
 .flex-col > input {
@@ -26,4 +28,8 @@
 
 .flex-col input {
   border: 2px solid cornflowerblue;
+}
+
+.pad-top {
+  padding-top: 2rem;
 }
